--- a/_includes/characteristics.html
+++ b/_includes/characteristics.html
@@ -1,6 +1,6 @@
 <div class="characteristics">
 	<div class="inner-characteristics">
-		<h1>Was uns ausmacht</h1>
+		<h1>Music Project Altmark West</h1>
 		{% for charics in site.characteristics %}
 		<article class="character">
 			<i class="{{ charics.icon }}"></i>
