--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,7 +44,7 @@ header {
 	background-size: cover;
 	padding: 15px;
 	text-align: center;
-	min-height: 80vh;
+	min-height: 40vh;
 	display: box;
 	justify-content: center;
 	align-items: center;	
@@ -216,8 +216,8 @@ div.team {
 		margin-right: auto;		
 			
 		article.portrait {	
-			width: 25%;
-			float: left;
+			width: 18%;
+			float: right;
 			img {		
 				border-radius: 50%;
 				border: 1px solid #222222;
